2005-01-22 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotn2313.h (SPM_PAGESIZE): Add. 
	* include/avr/iotn24.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn25.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn261.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn44.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn45.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn461.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn84.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn85.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn861.h (SPM_PAGESIZE): (Ditto.).

2005-01-20 Anatoly Sokolov <aesok@post.ru>

	* /libm/fplib/sqrt.S: Use __addsf3/__divsf3 instead 
	__addsf3x/__divsf3x.

2006-01-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Makefile.am (EXTRA_DIST): add ChangeLog-2005.

2006-01-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Released avr-libc 1.4.2.

2006-01-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version.

2006-01-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Galen Seitz:
	* avr-libc.spec.in: Fixed examples installation.

2006-01-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/Makefile.am: Fix the source directory for
	example installation so it will work when starting from
	outside $(top_srcdir).  This fixes "make distcheck".
	* include/avr/pgmspace.h: Add a warning about the _P()
	functions not working above 64 KB.

2005-01-06 Anatoly Sokolov <aesok@post.ru>

	(Contributed by Dmitry Xmelkov.)
	* libm/fplib/ldexp.S: Fix error if 'exp' argument > 32640.

2006-01-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* xml/patch-headers.py: add ATtinyX61, catch errors for
	non-existent ALT_NAME sections in interrupt vector table
	* doc/api/vectortable.dox: regenerate using patch-headers.py.

2006-01-05 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Extend the simple demo project to a boatload full of
	different AVRs: ATmega164/324/644, ATtiny261/461/861,
	ATmega165, ATmega169, ATmega325x/645x, ATmega329x/649x