@@ -2,6 +2,7 @@
 
 * Bugs fixed:
   [no-id]  Not defined SPM_PAGESIZE for ATtinyX4/X5/X61 and ATtiny2313 devices.
+  [#15494] Compile warning and errors if compiler flag -Wundef flag specified
 
 *** Changes in avr-libc-1.4.2:
 
